# tekito-operator

./: Cargo.toml  Dockerfile  Makefile.toml  README.md
config/samples/: cr.yaml  kustomization.yaml
src/: lib.rs
