[package]
name = "tekito-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
k8s-openapi = { version = "0.15.0", features = ["v1_22"] }
kube = { version = "0.73.1", default-features = false,  features = ["client", "runtime", "derive", "rustls-tls"] }
schemars = "0.8.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
validator = { version = "0.15.0", features = ["derive"] }
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros", "time"] }
anyhow = "1.0.58"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"